lib/src/compiler/tests/testdata/errors/33.out
error[E005]: assignment mismatch
 --> line:3:13
  |
3 |     for all x,y in (0..10) : ( true )
  |             ^^^ this expects 2 value(s)
  |                    ^^^^^^^ this produces 1 value(s)
  |